# create-fastify-api

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish-napi.yml
cli/: Cargo.toml
cli/fragments/fragment-fastify/: %(stable)%package.json
cli/fragments/fragment-fastify/src/: index.ts
cli/fragments/fragment-lambda/: %(stable)%package.json  _cta_manifest_
cli/fragments/fragment-lambda/src/: index.ts  server.ts
cli/node/: .gitignore  Cargo.toml  create-fastify-api.js  index.js  package-lock.json  package.json
cli/node/npm/darwin-x64/: create-fastify-api.darwin-x64  package.json
cli/node/src/: lib.rs
cli/src/: category.rs  cli.rs  colors.rs  deps.rs  lib.rs  main.rs  manifest.rs  package_manager.rs  template.rs  theme.rs
src/: server.ts
tests/: server.test.ts
tests/routes/: index.test.ts
